--- a/app/src/main/res/layout-land/activity_set_security.xml
+++ b/app/src/main/res/layout-land/activity_set_security.xml
@@ -54,10 +54,8 @@
             android:layout_gravity="bottom"
             android:clipToPadding="false"
             android:orientation="vertical"
-            android:paddingLeft="12dp"
-            android:paddingTop="4dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="4dp">
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="4dp">
 
             <Button
                 android:id="@+id/set"
