--- a/app/src/main/res/layout/gallery_detail_info.xml
+++ b/app/src/main/res/layout/gallery_detail_info.xml
@@ -27,8 +27,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/keyline_margin"
-        android:paddingRight="@dimen/keyline_margin">
+        android:paddingHorizontal="@dimen/keyline_margin">
 
         <TableRow>
 
