--- a/app/src/main/res/layout/item_gallery_info_data.xml
+++ b/app/src/main/res/layout/item_gallery_info_data.xml
@@ -21,8 +21,7 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/keyline_margin"
-    android:paddingRight="@dimen/keyline_margin">
+    android:paddingHorizontal="@dimen/keyline_margin">
 
     <TextView
         android:id="@+id/key"
