--- a/app/src/main/res/layout/item_gallery_list.xml
+++ b/app/src/main/res/layout/item_gallery_list.xml
@@ -43,9 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="8dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="4dp"
-            android:layout_marginRight="8dp"
             android:layout_toRightOf="@id/thumb" />
 
         <TextView
@@ -65,10 +64,8 @@
             android:layout_alignLeft="@id/title"
             android:layout_alignBottom="@id/thumb"
             android:layout_marginBottom="8dp"
-            android:paddingLeft="8dp"
-            android:paddingTop="2dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="2dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="2dp"
             android:textAllCaps="true"
             android:textColor="@android:color/white" />
 
