--- a/app/src/main/res/layout/widget_category_table.xml
+++ b/app/src/main/res/layout/widget_category_table.xml
@@ -47,9 +47,8 @@
             style="@style/CategoryText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/category_table_item_margin"
             android:layout_marginRight="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/artist_cg"
             android:text="@string/artist_cg"
@@ -60,8 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/category_table_item_margin"
-            android:layout_marginTop="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/game_cg"
             android:text="@string/game_cg"
@@ -74,9 +72,8 @@
             style="@style/CategoryText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/category_table_item_margin"
             android:layout_marginRight="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/western"
             android:text="@string/western"
@@ -87,8 +84,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/category_table_item_margin"
-            android:layout_marginTop="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/non_h"
             android:text="@string/non_h"
@@ -101,9 +97,8 @@
             style="@style/CategoryText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/category_table_item_margin"
             android:layout_marginRight="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/image_set"
             android:text="@string/image_set"
@@ -114,8 +109,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/category_table_item_margin"
-            android:layout_marginTop="@dimen/category_table_item_margin"
-            android:layout_marginBottom="@dimen/category_table_item_margin"
+            android:layout_marginVertical="@dimen/category_table_item_margin"
             android:layout_weight="1"
             android:background="@color/cosplay"
             android:text="@string/cosplay"
