--- a/app/src/main/res/layout/widget_content_layout.xml
+++ b/app/src/main/res/layout/widget_content_layout.xml
@@ -49,9 +49,8 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/gallery_content_margin_v"
-                android:paddingRight="@dimen/gallery_content_margin_v"
-                android:paddingBottom="@dimen/gallery_content_margin_h" />
+                android:paddingHorizontal="@dimen/gallery_content_margin_h"
+                android:paddingBottom="@dimen/gallery_content_margin_v" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -71,9 +70,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:paddingLeft="20dp"
-            android:paddingTop="8dp"
             android:paddingRight="4dp"
-            android:paddingBottom="8dp" />
+            android:paddingVertical="8dp" />
 
     </FrameLayout>
 
