--- a/app/src/main/res/layout/dialog_archive_list.xml
+++ b/app/src/main/res/layout/dialog_archive_list.xml
@@ -17,8 +17,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/abc_dialog_padding_top_material"
-    android:paddingBottom="@dimen/abc_dialog_padding_top_material">
+    android:paddingVertical="@dimen/abc_dialog_padding_top_material">
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progress"
