--- a/app/src/main/res/layout/gallery_tag_group.xml
+++ b/app/src/main/res/layout/gallery_tag_group.xml
@@ -18,5 +18,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/keyline_margin"
-    android:paddingRight="@dimen/keyline_margin" />
+    android:paddingHorizontal="@dimen/keyline_margin" />
