--- a/app/src/main/res/layout/item_gallery_tag.xml
+++ b/app/src/main/res/layout/item_gallery_tag.xml
@@ -20,8 +20,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
     android:background="@drawable/round_side_rect"
-    android:paddingLeft="12dp"
-    android:paddingTop="4dp"
-    android:paddingRight="12dp"
-    android:paddingBottom="4dp"
+    android:paddingHorizontal="12dp"
+    android:paddingVertical="4dp"
     android:textColor="@android:color/white" />
