--- a/app/src/main/res/layout/item_hosts.xml
+++ b/app/src/main/res/layout/item_hosts.xml
@@ -21,10 +21,8 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/keyline_margin"
-    android:paddingTop="8dp"
-    android:paddingRight="@dimen/keyline_margin"
-    android:paddingBottom="8dp">
+    android:paddingHorizontal="@dimen/keyline_margin"
+    android:paddingVertical="8dp">
 
     <TextView
         android:id="@+id/host"
