--- a/app/src/main/res/layout/widget_advance_search_table.xml
+++ b/app/src/main/res/layout/widget_advance_search_table.xml
@@ -44,8 +44,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
+        android:layout_marginVertical="@dimen/advance_search_table_item_margin">
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:layout_width="0dp"
@@ -69,8 +68,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
+        android:layout_marginVertical="@dimen/advance_search_table_item_margin">
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:layout_width="wrap_content"
@@ -85,8 +83,7 @@
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
+            android:layout_marginHorizontal="@dimen/advance_search_table_item_margin"
             android:imeOptions="actionNext"
             android:inputType="number"
             android:maxLines="1"
@@ -96,8 +93,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
+            android:layout_marginHorizontal="@dimen/advance_search_table_item_margin"
             android:text="@string/search_sp_to"
             android:textColor="?android:attr/textColorPrimary" />
 
@@ -105,8 +101,7 @@
             android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
+            android:paddingHorizontal="@dimen/advance_search_table_item_margin"
             android:imeOptions="actionNone"
             android:inputType="number"
             android:maxLines="1"
@@ -124,8 +119,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/advance_search_table_item_margin"
-        android:layout_marginBottom="@dimen/advance_search_table_item_margin">
+        android:layout_marginVertical="@dimen/advance_search_table_item_margin">
 
         <TextView
             android:layout_width="wrap_content"
@@ -154,8 +148,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/advance_search_table_item_margin"
-            android:layout_marginRight="@dimen/advance_search_table_item_margin"
+            android:layout_marginHorizontal="@dimen/advance_search_table_item_margin"
             android:layout_weight="1"
             android:minWidth="0dp"
             android:minHeight="0dp"
