Add issues link

--- a/app/src/main/res/xml/about_settings.xml
+++ b/app/src/main/res/xml/about_settings.xml
@@ -26,7 +26,7 @@
     <Preference
         android:key="author"
         android:title="@string/settings_about_author"
-        app:enableCopying="true"
+        app:enableCopying="false"
         app:iconSpaceReserved="false" />
 
     <com.hippo.preference.UrlPreference
@@ -42,6 +42,13 @@
         app:enableCopying="true"
         app:iconSpaceReserved="false"
         app:url="https://github.com/EhViewer-NekoInverter/EhViewer" />
+
+    <com.hippo.preference.UrlPreference
+        android:key="issues"
+        android:title="@string/settings_about_issues"
+        app:enableCopying="true"
+        app:iconSpaceReserved="false"
+        app:url="https://github.com/EhViewer-NekoInverter/EhViewer/issues/18" />
 
     <com.hippo.ehviewer.preference.VersionPreference
         android:key="version"
