Fixup! Support add favorite note
Co-Authored-By: FooIbar <118464521+FooIbar@users.noreply.github.com>

--- a/app/src/main/res/layout/item_gallery_list.xml
+++ b/app/src/main/res/layout/item_gallery_list.xml
@@ -57,6 +57,16 @@
             android:layout_marginTop="2dp" />
 
         <TextView
+            android:id="@+id/note"
+            style="@style/CardMessage"
+            android:textStyle="italic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/uploader"
+            android:layout_alignLeft="@id/title"
+            android:layout_marginTop="2dp" />
+
+        <TextView
             android:id="@+id/category"
             style="@style/CardMessage"
             android:layout_width="wrap_content"
