--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -286,13 +286,14 @@
         <item>@string/download_state_finish</item>
         <item>@string/download_state_failed</item>
         <item>@string/download_filter_title</item>
-        <item>@string/download_sort_by</item>
     </string-array>
 
     <string-array name="download_sort">
         <item>@string/download_sort_default</item>
         <item>@string/download_sort_shuffle</item>
         <item>@string/download_sort_title</item>
+        <item>@string/download_sort_author</item>
+        <item>@string/download_sort_name</item>
         <item>@string/download_sort_category</item>
     </string-array>
 
