--- a/app/src/main/res/layout/dialog_gallery_menu.xml
+++ b/app/src/main/res/layout/dialog_gallery_menu.xml
@@ -129,7 +129,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="@string/read_theme"
+                android:text="@string/settings_read_theme"
                 android:textColor="?android:attr/textColorPrimary" />
 
             <com.hippo.widget.CuteSpinner
