--- a/app/src/main/res/xml/read_settings.xml
+++ b/app/src/main/res/xml/read_settings.xml
@@ -57,7 +57,7 @@
         android:defaultValue="1"
         android:key="read_theme"
         android:summary="%s"
-        android:title="@string/read_theme"
+        android:title="@string/settings_read_theme"
         app:entries="@array/read_theme_entries"
         app:entryValues="@array/read_theme_entry_values"
         app:iconSpaceReserved="false" />
