--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -39,13 +39,13 @@
         app:iconSpaceReserved="false" />
 
     <com.hippo.ehviewer.preference.SignInRequiredPreference
-        android:key="com.hippo.ehviewer.ui.fragment.UConfigFragment"
+        android:key="uconfig"
         android:summary="@string/settings_eh_u_config_summary"
         android:title="@string/settings_eh_u_config"
         app:iconSpaceReserved="false" />
 
     <com.hippo.ehviewer.preference.SignInRequiredPreference
-        android:key="com.hippo.ehviewer.ui.fragment.MyTagsFragment"
+        android:key="mytags"
         android:summary="@string/settings_eh_my_tags_summary"
         android:title="@string/settings_eh_my_tags"
         app:iconSpaceReserved="false" />
@@ -183,7 +183,7 @@
         app:url="@string/settings_eh_tag_translations_source_url" />
 
     <Preference
-        android:key="com.hippo.ehviewer.ui.fragment.FilterFragment"
+        android:key="filter"
         android:summary="@string/settings_eh_filter_summary"
         android:title="@string/settings_eh_filter"
         app:iconSpaceReserved="false" />
