--- a/app/src/main/res/xml/privacy_settings.xml
+++ b/app/src/main/res/xml/privacy_settings.xml
@@ -20,7 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Preference
-        android:key="com.hippo.ehviewer.ui.fragment.SetSecurityFragment"
+        android:key="security"
         android:title="@string/settings_privacy_pattern_protection_title"
         app:iconSpaceReserved="false" />
 
