--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -32,10 +32,10 @@
     <rikka.preference.SimpleMenuPreference
         android:defaultValue="1"
         android:key="gallery_site"
-        android:summary="%s"
         android:title="@string/settings_eh_gallery_site"
         app:entries="@array/gallery_site_entries"
         app:entryValues="@array/gallery_site_entry_values"
+        app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
     <com.hippo.ehviewer.preference.SignInRequiredPreference
@@ -55,8 +55,8 @@
         android:entries="@array/night_mode_entries"
         android:entryValues="@array/night_mode_values"
         android:key="theme"
-        android:summary="%s"
         android:title="@string/dark_theme"
+        app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
     <SwitchPreferenceCompat
@@ -67,19 +67,19 @@
     <rikka.preference.SimpleMenuPreference
         android:defaultValue="0"
         android:key="launch_page"
-        android:summary="%s"
         android:title="@string/settings_eh_launch_page"
         app:entries="@array/launch_page_entries"
         app:entryValues="@array/launch_page_entry_values"
+        app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
     <rikka.preference.SimpleMenuPreference
         android:defaultValue="0"
         android:key="list_mode"
-        android:summary="%s"
         android:title="@string/settings_eh_list_mode"
         app:entries="@array/list_mode_entries"
         app:entryValues="@array/list_mode_entry_values"
+        app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
     <SeekBarPreference
