--- a/app/src/main/res/xml/eh_settings.xml
+++ b/app/src/main/res/xml/eh_settings.xml
@@ -38,13 +38,21 @@
         app:useSimpleSummaryProvider="true"
         app:iconSpaceReserved="false" />
 
-    <com.hippo.ehviewer.preference.SignInRequiredPreference
+    <com.hippo.ehviewer.preference.ImageLimitsPreference
+        android:key="image_limits"
+        android:summary="@string/settings_eh_image_limits_summary"
+        android:title="@string/settings_eh_image_limits"
+        app:iconSpaceReserved="false"
+        app:negativeButtonText="@android:string/cancel"
+        app:positiveButtonText="@string/settings_eh_reset" />
+
+    <Preference
         android:key="uconfig"
         android:summary="@string/settings_eh_u_config_summary"
         android:title="@string/settings_eh_u_config"
         app:iconSpaceReserved="false" />
 
-    <com.hippo.ehviewer.preference.SignInRequiredPreference
+    <Preference
         android:key="mytags"
         android:summary="@string/settings_eh_my_tags_summary"
         android:title="@string/settings_eh_my_tags"
